<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">Binaural Beats Therapy</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="help">Help</string>
    <string name="create">Create</string>
    <string name="setup">Setup</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_reset">Stop program and go back to Setup screen?</string>
    
    <string name="getting_involved">Getting Involved?</string>
    <string name="getting_involved_dialog">This application is free and open source, anyone can participate and make it better.
    I am looking for people to help on graphics, sounds, tone presets, documentation, video tutorial, ideas etc... as well as developers too!</string>
    <string name="share">Share</string>
    <string name="share_text">Binaural Beats Therapy @GiorgioRegni</string>
    <string name="close">Close</string>
    <string name="contact">Contact</string>
    <string name="blog">Blog</string>
    <string name="rate_on_market">Rate on market</string>
    <string name="donate">Donate</string>
    <string name="donate_text">This application is free and will stay free. Developing Binaural Beat Therapy, 
        researching and staying up to date on binaural beats and mind science takes time and a lot of efforts.
        Donating will help me spend more time on Binaural Beat Therapy and continue delivering updates and answering requests!
        
        Thanks for your help!
        Giorgio Regni</string>
    
    <string name="voices">Voices</string>
    <string name="background">Background</string>
    <string name="volume">Volume</string>
    
    <string name="welcome_text">Welcome to Binaural Beats Therapy! This app is free and open source, have fun and join the community! 
    Headphones and a safe environment are required.</string>
    
    <string name="source">Source</string>
    <string name="forum">Forum</string>
    <string name="like">Like</string>
    <string name="share_facebook">Share on Facebook</string>
    <string name="jointhecommunity">Join the community!</string>
    
    <string name="notif_started">Binaural Beats</string>
    <string name="notif_descr" formatted="false">%s in progress</string>
    
    <string name="info_timing" formatted="false">Main Beat %.2fHz - %s:%s/</string>
    <string name="time_format" formatted="false">%s:%s</string>
    <string name="time_format_min_sec" formatted="false">%sm%s</string>
    
    <string name="comments_title">Comments</string>
    <string name="menu">Menu</string>
    <string name="stop_program">Stop program</string>
    <string name="toggle_graphics">Graphics on/off</string>
    <string name="graphics_on">Graphics on</string>
    <string name="graphics_off">Graphics off, screen will turn off automatically</string>
    
    <string name="group_oobe">Out of body experience</string>
    
    
    <string name="program_self_hypnosis">Self Hypnosis</string>
    <string name="program_highest_mental_activity">Highest mental activity</string>
    <string name="program_unity">Unity</string>
    <string name="program_morphine">Morphine pain killer</string>
    <string name="program_learning">Study and learning</string>
    <string name="program_creativity">Creativity</string>
    <string name="program_schumann_resonance">Schumann Resonance</string>
    <string name="program_astral_01_relax">Astral projection - Relaxation</string>
    <string name="program_hallucination">Hallucination</string>
    <string name="program_sleep_induction">Sleep induction</string>
    <string name="program_lucid_dreams">Lucid dreams</string>
    <string name="program_lucid_dreams_2">Lucid dreams - variant</string>
    
    <string name="program_wakefulrelax">Wakeful Relaxation</string>
    <string name="program_shamanic_rhythm">Shamanic rhythm</string>
    <string name="program_smr">Insomnia Relief</string>
    <string name="program_powernap">Power Nap</string>
    <string name="program_airplanetravelaid">Airplane travel aid</string>
    <string name="program_oobe">Out Of Body Experience</string>
    <string name="program_hgh">Human Growth Hormone</string>
    <string name="program_adhd">ADHD</string>
    <string name="program_hiit">High Intensity Interval Training</string>
    
    
<string name="facebook_app_id">117055728638150</string>
</resources>
