<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/presetLayout"
    android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@drawable/background">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:gravity="center_vertical">


		<Button android:text="@string/help" android:id="@+id/MenuHelp"
			android:layout_width="65dip" android:layout_height="wrap_content"
			android:layout_weight="0"></Button>

		<TextView android:text="@string/app_name" android:id="@+id/TextView01"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="center" android:layout_weight="4"></TextView>

		<Button android:text="@string/source" android:id="@+id/MenuSourceCode"
			android:layout_width="65dip" android:layout_height="wrap_content"
			android:layout_weight="0"></Button>

	</LinearLayout>

	<ListView android:id="@+id/presetListView" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="4" />

	<LinearLayout android:layout_width="wrap_content"
	android:layout_gravity="center"
	 android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button android:id="@+id/likeButton" android:text="@string/like"
			android:layout_margin="1dip"
			android:layout_gravity="center"
			android:drawablePadding="0dip"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:drawableLeft="@drawable/facebooksmall" />

		<TextView android:id="@+id/jointhecommunityText" 
			android:layout_width="fill_parent"
			android:layout_gravity="center"
			android:layout_height="wrap_content" android:text="@string/jointhecommunity"
			android:layout_weight="10" />
	</LinearLayout>
</LinearLayout>